--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,9 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.x"
+  }
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
