--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "engines": {
     "npm": "6.x"
-  }
+  },
+  "buildpacks": [
+    {
+      "url": "mars/create-react-app"
+    }
+  ],
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
