--- a/package.json
+++ b/package.json
@@ -6,23 +6,22 @@
     "npm": "6.x",
     "node": "10.x"
   },
-  "buildpacks": [
-    {
-      "url": "mars/create-react-app"
-    }
-  ],
   "dependencies": {
+    "build": "^0.1.4",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "run": "^1.4.0",
     "travis": "^0.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
