--- a/client/package.json
+++ b/client/package.json
@@ -1,41 +1,31 @@
 {
-  "name": "client",
+  "name": "portfolio-app",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "npm": "6.x",
-    "node": "10.x"
-  },
+  "homepage": "https://dbarochiya.github.io/me",
   "dependencies": {
-    "build": "^0.1.4",
     "gh-pages": "^2.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "run": "^1.4.0",
-    "travis": "^0.1.1"
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-scripts": "2.1.5",
+    "travis": "^0.1.1",
+    "yarn": "^1.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "test": "react-scripts test",
     "deploy": "gh-pages -d build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
